fix: update dropdown caret icon and adjust gap size in Framer theme

--- a/src/components/inputs/dropdown/styles/framer.scss
+++ b/src/components/inputs/dropdown/styles/framer.scss
@@ -2,7 +2,7 @@
  *  Autogenerated by ⛋ Terrazzo. DO NOT EDIT!
  * ------------------------------------------- */
 
-:root[data-theme='framer'] {
+:root[data-theme="framer"] {
   --dropdown-background-color-default: var(--framer-color-bg-secondary);
   --dropdown-background-color-disabled: var(--framer-color-bg-tertiary);
   --dropdown-background-color-focus: var(--framer-color-bg-secondary);
@@ -27,7 +27,7 @@
   --dropdown-caret-color-hover: var(--framer-color-text-tertiary);
   --dropdown-caret-height: var(--size-pos-xsmall);
   --dropdown-caret-width: var(--size-pos-xsmall);
-  --dropdown-gap: var(--size-pos-xxxsmall);
+  --dropdown-gap: var(--size-pos-xxsmall);
   --dropdown-height: var(--size-pos-medium);
   --dropdown-padding-bottom: var(--size-null);
   --dropdown-padding-left: var(--size-pos-xxsmall);
@@ -45,3 +45,4 @@
   --dropdown-text-color-focus: var(--framer-color-text);
   --dropdown-text-color-hover: var(--framer-color-text);
 }
+
